# cargo-trustpub

./: Cargo.toml  LICENSE-APACHE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: api.rs  app.rs  main.rs
tests/: api.rs  cli.rs
